feat: 사용자용 티켓 목록 조회 서비스 추가